# D4BE-3-OnlineShop

./: .env.template  .gitignore  .tool-versions  Makefile  README.md  pyproject.toml
myshop/cart/: cart.py  views.py
myshop/myshop/: celery.py  settings.py  urls.py
myshop/orders/: admin.py  forms.py  models.py  tasks.py  views.py
myshop/orders/migrations/: 0001_initial.py
myshop/shop/: models.py  urls.py  views.py
myshop/shop/migrations/: 0001_initial.py
myshop/shop/templates/shop/: base.html
myshop/shop/templates/shop/product/: detail.html
